tests/testdata/test/fail_with_contain_unicode_filename🦕.out
Check [WILDCARD]/test/fail_with_contain_unicode_filename🦕.ts
running 1 test from ./test/fail_with_contain_unicode_filename🦕.ts
test 0 ... FAILED ([WILDCARD])

 ERRORS 

test 0 => ./test/fail_with_contain_unicode_filename🦕.ts:1:6
error: Error
  throw new Error();
        ^
    at [WILDCARD]/test/fail_with_contain_unicode_filename%F0%9F%A6%95.ts:2:9

 FAILURES 

test 0 => ./test/fail_with_contain_unicode_filename🦕.ts:1:6

FAILED | 0 passed | 1 failed ([WILDCARD])

error: Test failed
